--- a/app/src/main/res/layout/diploma_fragment_main_page.xml
+++ b/app/src/main/res/layout/diploma_fragment_main_page.xml
@@ -3,29 +3,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <include
         layout="@layout/diploma_top_bar"/>
 
-    <androidx.constraintlayout.motion.widget.MotionLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp">
+<!--    <androidx.constraintlayout.motion.widget.MotionLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="24dp">-->
 
-        <androidx.constraintlayout.helper.widget.Carousel
-            android:id="@+id/carousel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:carousel_infinite="true"
-            />
+<!--        <androidx.constraintlayout.helper.widget.Carousel-->
+<!--            android:id="@+id/carousel"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:carousel_infinite="true"-->
+<!--            />-->
 
-    </androidx.constraintlayout.motion.widget.MotionLayout>
+<!--    </androidx.constraintlayout.motion.widget.MotionLayout>-->
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="24dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginBottom="22dp"
         android:text="@string/recommend"
         android:textColor="@color/black"
         android:textSize="18sp"
@@ -36,7 +39,10 @@
         android:id="@+id/newsRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="22dp"
+        android:layout_marginEnd="22dp"
         android:orientation="vertical"
+        tools:listitem="@layout/item_recommendation"
         />
 
 </LinearLayout>
