--- a/app/src/main/res/layout/item_recommendation.xml
+++ b/app/src/main/res/layout/item_recommendation.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:gravity="center_vertical">
+    android:gravity="center_vertical"
+    android:background="@drawable/bg_item_news"
+    android:layout_marginBottom="16dp">
     
     <ImageView
         android:id="@+id/newsImage"
