--- a/app/src/main/res/layout/diploma_container_fragment.xml
+++ b/app/src/main/res/layout/diploma_container_fragment.xml
@@ -9,8 +9,7 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:name="com.example.diploma.ui.dashboard.ContainerFragment" />
+        android:layout_weight="1"/>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
