--- a/app/src/main/res/drawable/bg_main_white.xml
+++ b/app/src/main/res/drawable/bg_main_white.xml
@@ -3,6 +3,8 @@
     android:shape="rectangle">
 
     <solid android:color="@color/white"/>
-    <corners android:radius="30dp"/>
+    <corners
+        android:topLeftRadius="30dp"
+        android:topRightRadius="30dp"/>
 
 </shape>
