--- a/app/src/main/res/layout/diploma_fragment_login.xml
+++ b/app/src/main/res/layout/diploma_fragment_login.xml
@@ -5,15 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/blue"
     android:gravity="center_horizontal">
 
     <include
+        android:id="@+id/topBar"
         layout="@layout/diploma_top_bar"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:background="@drawable/bg_main_white"
         android:padding="20dp">
 
         <ImageView
