--- a/app/src/main/res/layout/item_vacancy.xml
+++ b/app/src/main/res/layout/item_vacancy.xml
@@ -15,7 +15,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:src="@mipmap/ic_one"
+        tools:src="@mipmap/ic_one"
         />
 
     <TextView
