--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="gray5">#585858</color>
     <color name="gray6">#EBEEF2</color>
     <color name="gray7">#394452</color>
+    <color name="gray8">#F4F6F9</color>
     <color name="gray_stroke">#247E7A7A</color>
     <color name="blue">#4980FF</color>
     <color name="dark_blue">#22215B</color>
