--- a/app/src/main/res/layout/diploma_container_fragment.xml
+++ b/app/src/main/res/layout/diploma_container_fragment.xml
@@ -16,6 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:menu="@menu/bottom_navigation_menu"
+        app:itemIconSize="40dp"
         />
 
 </LinearLayout>
