feat: roadmap topics page design

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,8 @@
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple">#415EB6</color>
     <color name="purple2">#859DE7</color>
-    <color name="purple3">##556594</color>
-    <color name="teal_200">#FF03DAC5</color>
+    <color name="purple3">#556594</color>
+    <color name="teal">#DBEFFF</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
