--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,4 +21,5 @@
     <color name="dark_blue">#22215B</color>
     <color name="light_purple">#EEF0FF</color>
     <color name="red_error">#FF0000</color>
+    <color name="red_light">#FFDEDE</color>
 </resources>
