--- a/app/src/main/res/drawable/progress_circle.xml
+++ b/app/src/main/res/drawable/progress_circle.xml
@@ -17,7 +17,7 @@
                 android:thicknessRatio="16"
                 android:useLevel="true">
                 <gradient
-                    android:endColor="@color/teal_200"
+                    android:endColor="@color/teal"
                     android:startColor="@color/black"
                     android:type="sweep" />
             </shape>
