--- a/app/src/main/res/layout/diploma_fragment_vacancies.xml
+++ b/app/src/main/res/layout/diploma_fragment_vacancies.xml
@@ -4,9 +4,12 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/gray8">
 
-    <include layout="@layout/diploma_top_bar"/>
+    <include
+        android:id="@+id/topPanel"
+        layout="@layout/diploma_top_bar"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -25,14 +28,33 @@
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/vacanciesRecyclerView"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="18dp"
-            tools:listitem="@layout/item_vacancy"
-            android:layout_marginBottom="10dp"
-            />
+            android:layout_height="wrap_content">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/vacanciesRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="18dp"
+                tools:listitem="@layout/item_vacancy"
+                android:layout_marginBottom="10dp"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:visibility="visible"
+                android:visibility="gone"
+                />
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                tools:visibility="visible"
+                android:visibility="gone"
+                android:layout_gravity="center"
+                android:indeterminateTint="@color/blue"
+                />
+
+        </FrameLayout>
 
     </LinearLayout>
 
