--- a/app/src/main/res/layout/item_filer.xml
+++ b/app/src/main/res/layout/item_filer.xml
@@ -7,6 +7,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <TextView
+        android:id="@+id/filter"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
