--- a/app/src/main/res/layout/item_vacancy.xml
+++ b/app/src/main/res/layout/item_vacancy.xml
@@ -4,7 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="16dp"
+    android:paddingTop="5dp"
+    android:paddingBottom="5dp"
+    android:paddingStart="10dp"
+    android:paddingEnd="10dp"
+    android:layout_marginTop="5dp"
+    android:layout_marginBottom="5dp"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/bg_vacancy">
 
@@ -22,7 +27,7 @@
         android:id="@+id/vacancyTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="10dp"
         android:layout_marginEnd="20dp"
         android:fontFamily="@font/source_sans_pro_semibold"
         android:textColor="@color/black"
@@ -45,7 +50,7 @@
         android:id="@+id/companyName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="10dp"
         android:textColor="@color/gray7"
         android:textSize="12sp"
         android:fontFamily="@font/source_sans_pro_regular"
@@ -59,11 +64,11 @@
         android:id="@+id/vacancyDetail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="10dp"
         android:textColor="@color/gray7"
         android:textSize="10sp"
         tools:text="Almaty - Part time"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/companyName"
         app:layout_constraintStart_toEndOf="@id/vacancyImage"
         tools:ignore="SmallSp"
         />
@@ -72,11 +77,11 @@
         android:id="@+id/salary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="16dp"
+        app:layout_constraintTop_toBottomOf="@id/vacancyDetail"
+        android:layout_marginEnd="10dp"
         tools:text="650 000 KZT"
-        android:textSize="24sp"
+        android:textSize="16sp"
         android:textColor="@color/blue"
         android:fontFamily="@font/source_sans_pro_semibold"
         />
