feat: roadmap page design

--- a/app/src/main/res/layout/diploma_fragment_main_page.xml
+++ b/app/src/main/res/layout/diploma_fragment_main_page.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical">
 
     <include
+        android:id="@+id/topPanel"
         layout="@layout/diploma_top_bar"/>
 
     <androidx.recyclerview.widget.RecyclerView
