--- a/app/src/main/res/layout/item_study_progress.xml
+++ b/app/src/main/res/layout/item_study_progress.xml
@@ -11,11 +11,10 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:indeterminateOnly="true"
-        android:progress="60"
+        tools:progress="50"
         android:progressDrawable="@drawable/progress_circle"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         />
 
@@ -23,13 +22,26 @@
         android:id="@+id/progress_percent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/source_sans_pro_semibold"
-        android:textColor="@color/black"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/roboto_black"
+        android:textColor="@color/blue"
         android:textSize="14sp"
         tools:text="50%"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
+
+    <TextView
+        android:id="@+id/courseName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/progress_circle"
+        tools:text="Front End"
+        android:textSize="10sp"
+        android:textColor="@color/blue"
+        android:fontFamily="@font/source_sans_pro_semibold"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
