--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,4 +22,6 @@
     <color name="light_purple">#EEF0FF</color>
     <color name="red_error">#FF0000</color>
     <color name="red_light">#FFDEDE</color>
+    <color name="orange">#FFB110</color>
+    <color name="orange_light">#FFFBEC</color>
 </resources>
