--- a/app/src/main/res/layout/diploma_study_material.xml
+++ b/app/src/main/res/layout/diploma_study_material.xml
@@ -125,15 +125,17 @@
                 android:paddingEnd="12dp"
                 />
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/linksRecyclerView"
+            <include
+                android:id="@+id/videoMaterial"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_gravity="center"
-                tools:listitem="@layout/item_link"
-                tools:itemCount="3"
-                />
+                layout="@layout/item_link"/>
+
+            <include
+                android:id="@+id/textMaterial"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                layout="@layout/item_link"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
