--- a/app/src/main/res/layout/diploma_fragment_main_page.xml
+++ b/app/src/main/res/layout/diploma_fragment_main_page.xml
@@ -8,13 +8,14 @@
 
     <include
         android:id="@+id/topPanel"
-        layout="@layout/diploma_top_bar"/>
+        layout="@layout/layout_main_top"/>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/carousel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        tools:orientation="horizontal"
+        android:orientation="horizontal"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/item_carousel"
         />
@@ -31,14 +32,33 @@
         android:fontFamily="@font/source_sans_pro_semibold"
         />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/newsRecyclerView"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="22dp"
-        android:layout_marginEnd="22dp"
-        android:orientation="vertical"
-        tools:listitem="@layout/item_recommendation"
-        />
+        android:layout_height="wrap_content">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/newsRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="22dp"
+            android:layout_marginEnd="22dp"
+            android:orientation="vertical"
+            tools:visibility="visible"
+            android:visibility="visible"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/item_recommendation"
+            />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            tools:visibility="visible"
+            android:visibility="gone"
+            android:indeterminateTint="@color/black"
+            android:layout_gravity="center"
+            />
+
+    </FrameLayout>
 
 </LinearLayout>
