--- a/app/src/main/res/layout/diploma_fragment_topics.xml
+++ b/app/src/main/res/layout/diploma_fragment_topics.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <include layout="@layout/diploma_top_bar"/>
@@ -55,17 +55,31 @@
         android:fontFamily="@font/source_sans_pro_regular"
         />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/topicsRecyclerView"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginTop="7dp"
-        android:layout_marginBottom="20dp"
-        tools:listitem="@layout/item_topic"
-        tools:itemCount="7"
-        />
+        android:layout_height="wrap_content">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/topicsRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginTop="7dp"
+            android:layout_marginBottom="20dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/item_topic"
+            tools:itemCount="7"
+            />
+
+        <ProgressBar
+            android:id="@+id/load"
+            android:layout_gravity="center"
+            android:indeterminateTint="@color/black"
+            android:layout_width="40dp"
+            android:layout_height="40dp"/>
+
+    </FrameLayout>
 
 </LinearLayout>
