--- a/app/src/main/res/layout/item_study_progress.xml
+++ b/app/src/main/res/layout/item_study_progress.xml
@@ -10,9 +10,10 @@
         android:id="@+id/progress_circle"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:indeterminateOnly="true"
+        android:indeterminateOnly="false"
+        style="@style/CircularDeterminateProgressBar"
         tools:progress="50"
-        android:progressDrawable="@drawable/progress_circle"
+        android:progressDrawable="@drawable/circle_progress"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -23,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:fontFamily="@font/roboto_black"
+        android:fontFamily="@font/source_sans_pro_bold"
         android:textColor="@color/blue"
         android:textSize="14sp"
         tools:text="50%"
@@ -39,7 +40,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/progress_circle"
         tools:text="Front End"
-        android:textSize="10sp"
+        android:textSize="16sp"
         android:textColor="@color/blue"
         android:fontFamily="@font/source_sans_pro_semibold"
         />
