--- a/app/src/main/res/layout/diploma_fragment_vacancy_detail.xml
+++ b/app/src/main/res/layout/diploma_fragment_vacancy_detail.xml
@@ -209,6 +209,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     tools:listitem="@layout/item_requirement"
                     tools:itemCount="5"/>
 
