--- a/app/src/main/res/layout/diploma_layout_technologies.xml
+++ b/app/src/main/res/layout/diploma_layout_technologies.xml
@@ -13,10 +13,10 @@
         android:id="@+id/techRecycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/topPanel"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         android:visibility="visible"/>
 
