--- a/app/src/main/res/layout/item_vacancy.xml
+++ b/app/src/main/res/layout/item_vacancy.xml
@@ -64,7 +64,7 @@
 
     <TextView
         android:id="@+id/vacancyDetail"
-        android:layout_width="50dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/gray7"
         android:textSize="10sp"
