--- a/app/src/main/res/layout/layout_roadmap.xml
+++ b/app/src/main/res/layout/layout_roadmap.xml
@@ -17,7 +17,7 @@
         android:id="@+id/roadmapImage"
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:src="@mipmap/ic_one"
+        tools:src="@mipmap/ic_one"
         />
 
     <TextView
