--- a/app/src/main/res/drawable/topic_progress_style.xml
+++ b/app/src/main/res/drawable/topic_progress_style.xml
@@ -1,32 +1,22 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <!-- Define the background properties like color etc -->
     <item android:id="@android:id/background">
         <shape>
-            <gradient
-                android:startColor="@color/blue_light"
-                android:centerColor="@color/blue_light"
-                android:centerY="1.0"
-                android:endColor="@color/blue_light"
-                android:angle="270"
-                />
             <corners android:radius="20dp"/>
+            <solid android:color="@color/blue_light"/>
         </shape>
     </item>
 
-    <!-- Define the progress properties like start color, end color etc -->
-    <item android:id="@android:id/progress">
-        <clip>
+    <item android:id="@android:id/progress"
+        android:top="1dp"
+        android:bottom="1dp"
+        android:left="1dp"
+        android:right="1dp">
+
+        <scale android:scaleWidth="100%">
             <shape>
-                <gradient
-                    android:startColor="@color/dark_blue"
-                    android:centerColor="@color/dark_blue"
-                    android:centerY="1.0"
-                    android:endColor="@color/dark_blue"
-                    android:angle="270"
-                    />
                 <corners android:radius="20dp"/>
+                <solid android:color="@color/blue"/>
             </shape>
-        </clip>
+        </scale>
     </item>
 </layer-list>
