--- a/app/src/main/res/layout/diploma_study_material.xml
+++ b/app/src/main/res/layout/diploma_study_material.xml
@@ -108,7 +108,7 @@
                     android:layout_marginTop="30dp"
                     android:layout_marginEnd="24dp"
                     android:layout_marginStart="24dp"
-                    android:gravity="center_horizontal"
+                    android:gravity="start"
                     android:background="@drawable/bg_vacancy"
                     android:padding="10dp"
                     tools:text="PHP is one of the most common web development languages. It is used to create websites and web applications of any complexity. from landing pages and blogs to online stores and browser games. Its advantages are its broad capabilities and security due to the closed source code."
@@ -126,6 +126,8 @@
                     android:fontFamily="@font/source_sans_pro_semibold"
                     android:background="@drawable/bg_res"
                     android:layout_marginTop="12dp"
+                    android:layout_gravity="start"
+                    android:layout_marginStart="24dp"
                     android:paddingTop="14dp"
                     android:paddingBottom="14dp"
                     android:paddingStart="12dp"
@@ -144,6 +146,7 @@
                     tools:listitem="@layout/item_link"/>
 
                 <LinearLayout
+                    android:id="@+id/nextButton"
                     android:layout_width="wrap_content"
                     android:layout_height="30dp"
                     android:orientation="horizontal"
@@ -152,11 +155,10 @@
                     android:layout_marginEnd="28dp"
                     android:layout_marginBottom="32dp"
                     android:layout_marginTop="18dp"
-                    android:padding="4dp"
+                    android:padding="6dp"
                     android:gravity="center">
 
                     <TextView
-                        android:id="@+id/nextButton"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="5dp"
