--- a/app/src/main/res/layout/item_study_progress.xml
+++ b/app/src/main/res/layout/item_study_progress.xml
@@ -4,7 +4,8 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="10dp">
 
     <ProgressBar
         android:id="@+id/progress_circle"
