--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -50,6 +50,9 @@
         <action
             android:id="@+id/action_register_to_login"
             app:destination="@id/loginFragment"/>
+        <action
+            android:id="@+id/action_register_to_container"
+            app:destination="@+id/containerFragment"/>
     </fragment>
     <fragment
         android:id="@+id/vacanciesFragment"
