--- a/app/src/main/res/layout/item_study_progress.xml
+++ b/app/src/main/res/layout/item_study_progress.xml
@@ -5,7 +5,12 @@
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="10dp">
+    android:layout_margin="10dp"
+    android:paddingTop="10dp"
+    android:paddingBottom="8dp"
+    android:paddingStart="40dp"
+    android:paddingEnd="40dp"
+    android:background="@drawable/item_skill_approved">
 
     <ProgressBar
         android:id="@+id/progress_circle"
