--- a/app/src/main/res/layout/layout_roadmap.xml
+++ b/app/src/main/res/layout/layout_roadmap.xml
@@ -10,6 +10,8 @@
     android:paddingEnd="20dp"
     android:layout_marginStart="10dp"
     android:layout_marginEnd="10dp"
+    android:layout_marginBottom="10dp"
+    android:layout_marginTop="10dp"
     android:orientation="vertical"
     android:gravity="center">
 
