--- a/app/src/main/res/layout/diploma_fragment_forgot_password.xml
+++ b/app/src/main/res/layout/diploma_fragment_forgot_password.xml
@@ -1,92 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="22dp">
 
-    <TextView
+    <include
         android:id="@+id/title"
+        layout="@layout/layout_forget_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:text="@string/forgot_password_title"
-        android:textSize="30sp"
-        android:textColor="@color/black"
-        android:fontFamily="@font/source_sans_pro_bold"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        />
+        android:layout_marginTop="40dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="44dp"
         android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@+id/title"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/title">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textSize="18sp"
+            android:fontFamily="@font/source_sans_pro_semibold"
             android:text="@string/forgot_password_subtitle"
-            android:fontFamily="@font/source_sans_pro_semibold"/>
+            android:textColor="@color/black"
+            android:textSize="18sp" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/smsContactDetail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="28dp"
-            android:paddingTop="20dp"
-            android:paddingBottom="20dp"
+            android:background="@drawable/bg_forgot_password_contact"
             android:paddingLeft="24dp"
+            android:paddingTop="20dp"
             android:paddingRight="24dp"
-            android:background="@drawable/bg_forgot_password_contact">
+            android:paddingBottom="20dp">
 
             <ImageView
                 android:id="@+id/smsIcon"
                 android:layout_width="28dp"
                 android:layout_height="28dp"
-                android:src="@drawable/ic_sms"
                 android:background="@color/light_purple"
-                app:layout_constraintTop_toTopOf="parent"
+                android:src="@drawable/ic_sms"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/smsText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:text="@string/smsText"
-                android:textSize="14sp"
-                android:textColor="@color/black"
                 android:fontFamily="@font/source_sans_pro_regular"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toEndOf="@id/smsIcon"
+                android:text="@string/smsText"
+                android:textColor="@color/black"
+                android:textSize="14sp"
                 app:layout_constraintBottom_toTopOf="@id/phoneNumber"
-                />
+                app:layout_constraintStart_toEndOf="@id/smsIcon"
+                app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
+            <EditText
                 android:id="@+id/phoneNumber"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="+7777777777"
-                android:textSize="18sp"
-                android:textColor="@color/black"
-                android:fontFamily="@font/source_sans_pro_bold"
                 android:layout_marginStart="10dp"
-                app:layout_constraintTop_toBottomOf="@id/smsText"
-                app:layout_constraintStart_toEndOf="@id/smsIcon"
+                android:background="@color/white"
+                android:fontFamily="@font/source_sans_pro_bold"
+                android:hint="@string/_7777777777"
+                android:inputType="phone"
+                android:textColor="@color/black"
+                android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                />
+                app:layout_constraintStart_toEndOf="@id/smsIcon"
+                app:layout_constraintTop_toBottomOf="@id/smsText" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -95,50 +86,49 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="28dp"
-            android:paddingTop="20dp"
-            android:paddingBottom="20dp"
+            android:background="@drawable/bg_forgot_password_contact"
             android:paddingLeft="24dp"
+            android:paddingTop="20dp"
             android:paddingRight="24dp"
-            android:background="@drawable/bg_forgot_password_contact">
+            android:paddingBottom="20dp">
 
             <ImageView
                 android:id="@+id/emailIcon"
                 android:layout_width="28dp"
                 android:layout_height="28dp"
-                android:src="@drawable/ic_mail"
                 android:background="@color/light_purple"
-                app:layout_constraintTop_toTopOf="parent"
+                android:src="@drawable/ic_mail"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/emailText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:text="@string/email"
-                android:textSize="14sp"
-                android:textColor="@color/black"
                 android:fontFamily="@font/source_sans_pro_regular"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toEndOf="@id/emailIcon"
+                android:text="@string/email"
+                android:textColor="@color/black"
+                android:textSize="14sp"
                 app:layout_constraintBottom_toTopOf="@id/email"
-                />
+                app:layout_constraintStart_toEndOf="@id/emailIcon"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="example@gmail.com"
-                android:textSize="18sp"
-                android:textColor="@color/black"
-                android:fontFamily="@font/source_sans_pro_bold"
                 android:layout_marginStart="10dp"
-                app:layout_constraintTop_toBottomOf="@id/emailText"
-                app:layout_constraintStart_toEndOf="@id/emailIcon"
+                android:fontFamily="@font/source_sans_pro_bold"
+                android:hint="@string/example_gmail_com"
+                android:inputType="textEmailAddress"
+                android:textColor="@color/black"
+                android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                />
+                app:layout_constraintStart_toEndOf="@id/emailIcon"
+                app:layout_constraintTop_toBottomOf="@id/emailText"
+                tools:ignore="TextViewEdits" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -148,16 +138,15 @@
         android:id="@+id/continueButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="12dp"
         android:background="@drawable/bg_button_sign"
-        android:gravity="center_horizontal"
-        android:text="@string/continue_text"
-        android:textSize="15sp"
-        android:textColor="@color/white"
         android:fontFamily="@font/roboto_medium"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:gravity="center_horizontal"
+        android:padding="12dp"
+        android:text="@string/continue_text"
+        android:textColor="@color/white"
+        android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
