--- a/app/src/main/res/layout/diploma_fragment_reset_password.xml
+++ b/app/src/main/res/layout/diploma_fragment_reset_password.xml
@@ -6,19 +6,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="22dp">
 
-    <TextView
+    <include
         android:id="@+id/title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:text="@string/reset_password_title"
-        android:textSize="30sp"
-        android:textColor="@color/black"
-        android:fontFamily="@font/source_sans_pro_bold"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        />
+        layout="@layout/layout_forget_password"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -41,7 +31,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="34dp"
-            android:layout_marginLeft="28dp"
+            android:layout_marginStart="28dp"
             android:text="@string/new_password"
             android:textSize="14sp"
             android:textColor="@color/black"
@@ -128,7 +118,7 @@
         android:padding="12dp"
         android:background="@drawable/bg_button_sign"
         android:gravity="center_horizontal"
-        android:text="@string/continue_text"
+        android:text="@string/save"
         android:textSize="15sp"
         android:textColor="@color/white"
         android:fontFamily="@font/roboto_medium"
