--- a/app/src/main/res/layout/diploma_fragment_topics.xml
+++ b/app/src/main/res/layout/diploma_fragment_topics.xml
@@ -4,14 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/blue">
+    android:orientation="vertical">
+
+    <include
+        android:id="@+id/topPanel"
+        layout="@layout/layout_top"/>
 
     <LinearLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="80dp"
         android:background="@drawable/bg_topics_dialog"
         android:orientation="vertical">
 
